--- a/site/src/App.css
+++ b/site/src/App.css
@@ -1,11 +1,9 @@
 .App {
-  margin-top: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+
 }
 
 .App-header {
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   /*background-color: #282c34;*/
   min-height: 100vh;
   /*display: flex;*/
