--- a/site/src/components/ArticleList/ArticleList.css
+++ b/site/src/components/ArticleList/ArticleList.css
@@ -1,3 +1,10 @@
 .ArticleList {
-    border: 1px solid red;
+    /*border: 1px solid red;*/
+}
+
+.EmptyResult {
+    margin: 10px 50px;
+
+    font-weight: bolder;
+    font-size: 1.2em;
 }
