refactor react componets, improve styling, fix test failed on linux

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -20,3 +20,14 @@
   font-weight: bolder;
   font-size: 1.2em;
 }
+
+.ArticleList {
+  margin-left: 1.2em;
+}
+
+.EmptyResult {
+  margin: 10px 50px;
+
+  font-weight: bolder;
+  font-size: 1.2em;
+}
