--- a/site/src/components/Article/Article.css
+++ b/site/src/components/Article/Article.css
@@ -20,6 +20,8 @@
 }
 
 .ArticleTitle {
-    font-weight: bolder;
+    margin-left: 15px;
+    margin-bottom: 10px;
+    font-weight: bold;
     font-size: 1.2em;
 }
