--- a/site/src/components/TopNavBar/TopNavBar.css
+++ b/site/src/components/TopNavBar/TopNavBar.css
@@ -1,8 +1,6 @@
 .TopNavBar {
     padding: 5px 10px;
 
-    background-color: gainsboro;
-
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
@@ -12,6 +10,18 @@
     gap: 10px;
 }
 
+.TopNavBar img {
+    margin: -5px 0 -20px 0;
+}
+
+
+.SearchTextField {
+    min-width: 200px;
+    width: 60%;
+    max-width: 600px;
+}
+
 .UserInfo {
-    outline: 1px solid darkgray;
+    margin-left: auto;
+    margin-right: 5em;
 }
