--- a/site/src/components/Article/Article.css
+++ b/site/src/components/Article/Article.css
@@ -2,7 +2,14 @@
     margin-top:10px;
     margin-left: 50px;
     margin-right: 50px;
-    /*border: 1px solid black;*/
+}
+
+.Article hr {
+    margin-top: 15px;
+}
+
+.Article:last-child hr {
+    display: none;
 }
 
 .ArticleDescription {
